--- a/Manage_Staff_Mamber.html
+++ b/Manage_Staff_Mamber.html
@@ -34,7 +34,7 @@
 </ul>
 
   </nav>
-
+<main id="MSM">
     <h1>Manage Staff Members</h1>
 
 
@@ -165,7 +165,7 @@
   
     <button class="add" type="button" onclick="addStaff()">Add</button>
   </form>
-    
+    </main>
   <!-- Footer -->
   <footer>
     <div class="footer-left">
